# opencv_preview

./: README.md
parallel_worlds_1/src/: OpenCLInterface.hpp
parallel_worlds_2_cuda/src/: .CMakeLists.txt.swp  CMakeLists.txt  GreyFilter.cu  ImageFilter.hpp  SobelFilter.cu
parallel_worlds_3/: README.md
parallel_worlds_3/src/: CMakeLists.txt  DehazeFilter.hpp  OpenCLInterface.hpp  dehazeFilters.cl  greyImageFilters.cl
